--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700;900&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,15 +20,15 @@
                 <h2>24/11  <span>Quinta</span></h2>
                 <ul>
                     <li>
-                        <img src="./assets/switzerland.svg" alt="Logo Switzerland">
+                        <img src="./assets/icon-switzerland.svg" alt="Logo Switzerland">
                         <strong>07:00</strong>
-                        <img src="./assets/cameroon.svg" alt="Logo Cameroon">
+                        <img src="./assets/icon-cameroon.svg" alt="Logo Cameroon">
                     </li>
 
                     <li>
-                        <img src="./assets/brazil.svg" alt="Logo Brazil">
+                        <img src="./assets/icon-brazil.svg" alt="Logo Brazil">
                         <strong>16:00</strong>
-                        <img src="./assets/serbia.svg" alt="Logo Serbia">
+                        <img src="./assets/icon-serbia.svg" alt="Logo Serbia">
                     </li>
                 </ul>
             </div>
