--- a/index.html
+++ b/index.html
@@ -15,24 +15,7 @@
         <header>
             <img src="./assets/logo.svg" alt="Logo calendário copa">
         </header>
-        <main id="cards">
-            <div class="card">
-                <h2>24/11  <span>Quinta</span></h2>
-                <ul>
-                    <li>
-                        <img src="./assets/icon-switzerland.svg" alt="Logo Switzerland">
-                        <strong>07:00</strong>
-                        <img src="./assets/icon-cameroon.svg" alt="Logo Cameroon">
-                    </li>
-
-                    <li>
-                        <img src="./assets/icon-brazil.svg" alt="Logo Brazil">
-                        <strong>16:00</strong>
-                        <img src="./assets/icon-serbia.svg" alt="Logo Serbia">
-                    </li>
-                </ul>
-            </div>
-        </main>
+        <main id="cards"></main>
     </div>
     <script src="./main.js"></script>
 </body>
