--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 <body>
     <div id="app">
         <header>
-            <img src="./assets/logo.svg" alt="Logo calendário copa">
+            <div class="wrapper">
+                <img src="./assets/logo.svg" alt="Logo calendário copa">
+                <h1>CALENDÁRIO</h1>
+            </div>  
         </header>
         <main id="cards"></main>
     </div>
